Fix hamburger on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -78,6 +78,7 @@ button:hover {
   color: white;
   border: none;
   cursor: pointer;
+  justify-content: center;
 }
 
 #open-nav {
@@ -342,7 +343,14 @@ button:hover {
 /**************************************************************************************************************************************************/
 @media screen and (max-width: 500px) {
   .nav span {font-size: 18px;}
-  .nav {height: 100%;}
+  .nav {
+    height: 100%;
+  }
+  #open-nav{
+    font-size: 16px;
+    margin: 0;
+    padding: .05em;
+  }
 }
 
 /**************************************************************************************************************************************************/
